--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-source-filesystem": "^2.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
