--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.26.1",
     "gatsby-source-filesystem": "^2.9.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0"
   }
 }
